# JoJoTrading

./: .dockerignore  .env  .env.example  .gitignore  ANOMALY_DETECTION_IMPLEMENTATION_REPORT.md  DEPLOY_NOW.md  DEPLOY_TO_GITHUB.md  DEVELOPER_LOG.md  DEV_FLOW_AND_REQUIREMENTS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  FINAL_DEPLOY_STEPS.md  FINAL_PROJECT_COMPLETION_REPORT_UPDATED.md  FINAL_SUCCESS_REPORT_COMPLETE.md  GITHUB_DEPLOY_GUIDE.md  JoJoTrader.spec  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE1_VALIDATION_REPORT.md  PHASE3_DEVELOPMENT_PLAN.md  PROJECT_RESTRUCTURE_PLAN.md  PROJECT_STATUS_FINAL_SUMMARY.md  README.md  ROOT_DIRECTORY_INTEGRATION_ANALYSIS.md  RUN_DESKTOP_APP.bat  RUN_WEB_APP.bat  STAGE6_COMPLETION.md  agents.yaml  all_companies_basic_data.json  analyze_financial_industry.py  analyze_report_types.py  app.py  class_diagram.mmd  data_fetching.py  data_handler.py  debug_log.txt  debug_strat.txt  demo_phase1.py  deploy_interactive.ps1  diagnose_autoconnect.py  (+60 more)
.clinerules/: JoJoTrading_RULES.md
.context/: architecture.md  coding_style.md
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_disabled/refs/: stash
.github/: copilot-instructions.md
.github/workflows/: auto-release.yml  ci-cd.yml  code-quality.yml  performance-monitoring.yml
PROJECT_HANDOVER/: FAQ.md  README.md
PROJECT_HANDOVER/01_PROJECT_OVERVIEW/: FEATURE_MODULES_LIST.md  MAIN_README.md  PROJECT_STATUS_OVERVIEW.md
PROJECT_HANDOVER/02_DEVELOPMENT_HISTORY/: 2025-05_Phase1_Development.md  2025-06-05_Critical_System_Fixes.md  2025-06-10to12_Enhanced_DCF_Implementation.md  2025-06-12_Complete_Development_Log.md  (+9 more)
api/: main.py
archive/: DCF估值分析_backup.py  智能交易系統_backup.py
archive_jojo_20250419/: .gitignore  CLASS_DIAGRAM.md  README.md  gui.py  main.py  requirements.txt  台指期交易系統.spec  啟動JoJoTrading主程式.bat  執行_shioaji合約測試.bat  執行_shioaji憑證啟用與合約測試.bat  排查_shioaji合約為0處理紀錄.md
artifacts/: checkpoint.md  plan_fix_workflow_errors.md  plan_jojo_github_pages_demo.md
config/: default_config.json
desktop_app/: portable_launcher.py  real_desktop_app.py  run_desktop.bat  run_portable.bat  run_settings.bat
docs/: ASSET_DISPOSAL_DETECTION_SOLUTION.md  CONNECTION_ARCHITECTURE.md  DCF_PARAMETERS_AUTOMATION_ANALYSIS.md  DCF_PARAMETERS_BEST_PRACTICES.md  DOCUMENTATION_REORGANIZATION_EXECUTION.md  PROJECT_STRUCTURE.md  README.md  demo_script.md  deployment_checklist.md  index.html
examples/: cache_monitoring_demo.py  monitoring_demo.py  performance_comparison.py
export/: jojo_export_20250515_143419.csv  jojo_export_20250515_143903.csv  jojo_export_20250515_143903.xlsx  jojo_export_20250515_144054.xlsx  jojo_export_20250515_144440.xlsx  jojo_export_20250515_145252.xlsx
modules/: __init__.py  data_validator.py  debug_tools.py  enhanced_dcf.py  growth_analyzer.py  i18n.py  integrated_dcf_handler.py  macro_data_handler.py
monitoring/: prometheus.yml
pages/: dcf_analysis.py  🏠_儀表板.py  💼_投資組合管理.py  📈_技術分析.py  📊_DCF估值計算.py  📊_DCF分析.py  🧪_DCF測試.py  🧪_功能測試.py
reports/: README.md
requirements/: base.txt  dev.txt  prod.txt  requirements_minimal.txt  test.txt
scripts/: TEST_AI.bat  cleanup_reports.ps1  cloud_deployment_manager.py  fetch_taifex_margins.py  generate_visualizations.py  inspect_contract_specs.py  inspect_margin.py  performance_benchmark.py  phase4_action_plan.py  phase5_launch.py  reset_wsl_password.bat  setup_wsl_full.bat  setup_wsl_node20.bat  setup_wsl_node22.bat  setup_wsl_openclaw.bat  system_diagnosis.py  update_semiconductors.py  update_stock_db.py
temp_archive_backup/: __init__.py
tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_config.toml
web_app/: main_app.py
widgets/: market_data_panel.py  stock_list_panel.py
(+1001 files in other folders)
